feat: agregar imagenes personalizadas

--- a/imagenes/index.html
+++ b/imagenes/index.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body {
-        background-color: #282828;
-        color: rgba(56, 246, 4, 0.725);
-        font-family: monospace;
-      }
-    </style>
   </head>
   <body>
-    <h1>Hola desde un servidor usando Python</h1>
+    <h1>Mi primera imagen personalizada</h1>
   </body>
 </html>
